--- a/VBALib/z_VLibList.cls
+++ b/VBALib/z_VLibList.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "zVLibList"
+Attribute VB_Name = "z_VLibList"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
