--- a/VBALib/z_WsCsvCallBack.cls
+++ b/VBALib/z_WsCsvCallBack.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "zWsCallBack"
+Attribute VB_Name = "z_WsCsvCallBack"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
@@ -37,4 +37,4 @@ Option Explicit
 '////////////////////////////////////////////////////////////////////////////////////////////
 '@--------------------------------------------------------------------
 ' Expose functions defined in the CSVudFunctions.cls
-Public UserDefFunctions As New zWsUdFunctions
+Public UserDefFunctions As New z_WsCsvUdFunctions
